src/objects/MX_RTE_Programas__c.object
<CustomObject>
    <fields>
        <fullName>MX_RTE_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de busqueda para relacionar un Program Manager</description>
        <label>Program Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.MX_RTE_Rol__c</field>
                <operation>equals</operation>
                <value>Program Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programa</relationshipLabel>
        <relationshipName>Programa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_RTE_Responsable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de búsqueda para la aplicación RTE, devuelve al RTE asignado</description>
        <label>Responsable RTE</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Usuario RTE</value>
            </filterItems>
            <filterItems>
                <field>Contact.MX_RTE_Rol__c</field>
                <operation>equals</operation>
                <value>RTE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programa (RTE Responsable)</relationshipLabel>
        <relationshipName>Iniciativa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Resposable_RCI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Responsable RCI</description>
        <label>Resposable RCI</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programa (Resposable RCI)</relationshipLabel>
        <relationshipName>Programa1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Programa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_RTE_Program_Manager__c</columns>
        <columns>MX_RTE_Resposable_RCI__c</columns>
        <columns>MX_RTE_RTE_Responsable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del Programa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programa</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>